k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: three-tier
  labels:
    app: devtask
    environment: local
